configs/alb_sg.tf
# Create alb Security Group 
resource "aws_security_group" "alb_sg" {
  vpc_id = "${aws_vpc.rg_vpc.id}"

# Inbound Rules
# HTTP access from anywhere
ingress {
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

# Outbound Rules
# Internet access to anywhere
egress {
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}
tags = {
  Name = "Alb SG"
}
}
